--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Shakira</title>
 </head>
 
@@ -17,7 +17,7 @@
     <main class="contenedor">
         <section id="section1">
             <h2>Biografía de Shakira</h2>
-            <img src="../IMG/descarga.jpg" alt="Foto de Shakira">
+            <img src="descarga.jpg" alt="Foto de Shakira">
             <p><br>Shakira Isabel Mebarak Ripoll, conocida como Shakira, nació el 2 de febrero de 1977 en Barranquilla,
                 Colombia. Es una cantante, compositora y bailarina reconocida a nivel internacional. Comenzó su carrera
                 a temprana edad y se convirtió en una estrella de la música latina en la década de 1990.
@@ -53,11 +53,11 @@
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen>
                 </iframe>
-                <img src="../IMG/images.jpg" alt="Foto 1 Shakira">
-                <img src="../IMG/descarga.jpg" alt="">
-                <img src="../IMG/descarga (3).jpg" alt="">
-                <img src="../IMG/descarga (2).jpg" alt="">
-                <img src="../IMG/descarga (1).jpg" alt="">
+                <img src="images.jpg" alt="Foto 1 Shakira">
+                <img src="descarga.jpg" alt="">
+                <img src="descarga (3).jpg" alt="">
+                <img src="descarga (2).jpg" alt="">
+                <img src="descarga (1).jpg" alt="">
 
             </div>
         </section>
